--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -41,11 +41,12 @@
 
     <nav id="navbar" class="navbar">
       <ul>
-        <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-        <li><a class="nav-link scrollto" href="#about">About</a></li>
-        <li><a class="nav-link scrollto" href="#resume">Resume</a></li>
-        <li><a class="nav-link scrollto" href="#services">Services</a></li>
-        <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+        <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+        <li><a class="nav-link scrollto" href="about.html">About</a></li>
+        <li><a class="nav-link scrollto" href="skills.html">Services</a></li>
+        <li><a class="nav-link scrollto " href="portfolio.html">Projects</a></li>
+        <li><a class="nav-link scrollto " href="pricing.html">Pricing</a></li>
+        
         <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Drop Down 1</a></li>
@@ -63,7 +64,7 @@
             <li><a href="#">Drop Down 4</a></li>
           </ul>
         </li>
-        <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+        <li><a class="nav-link scrollto " href="contact.html">Contact</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
@@ -80,69 +81,6 @@
   </section><!-- End Hero -->
 
   <main id="main">
-
-    <!-- ======= About Me Section ======= -->
-    <section id="about" class="about">
-      <div class="container">
-
-        <div class="section-title">
-          <span>About Me</span>
-          <h2>About Me</h2>
-          <p>"Je suis un penseur pas un parleur."</p>
-        </div>
-
-        <div class="row">
-          <div class="image col-lg-4 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
-          <div class="col-lg-8 d-flex flex-column align-items-stretch">
-            <div class="content ps-lg-4 d-flex flex-column justify-content-center">
-              <div class="row">
-                <div class="col-lg-6">
-                  <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Angel Marie Tan Rullen</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.artaehstudio.com</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>0906 032 8682</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Cagayan de Oro, PH</span></li>
-                  </ul>
-                </div>
-                <div class="col-lg-6">
-                  <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>aartaeh@example.com</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="row mt-n4">
-                <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
-                  <div class="count-box">
-                    <i class="bi bi-emoji-smile" style="color: #20b38e;"></i>
-                    <p><strong>Despite</strong>  the fact that I am not very skilled, I am certain that my photographs are better than those of others.</p>
-                  </div>
-                </div>
-
-                <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
-                  <div class="count-box">
-                    <i class="bi bi-journal-richtextr" style="color: #8a1ac2;"></i>
-                    <p><strong>I</strong>  took pictures of my friends' pre-debuts, my cousin's birthday, and several of my college buddies.</p>
-                  </div>
-                </div>
-
-                <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
-                  <div class="count-box">
-                    <i class="bi bi-clock" style="color: #2cbdee;"></i>
-                    <p><strong>Years of experience</strong> Even before I realized I loved taking photos, I frequently took ones of my friends, loved ones, and myself. In the year 2020, I discovered I had a talent for photography.</p>
-                  </div>
-                </div>
-
-                <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
-                  <div class="count-box">
-                    <i class="bi bi-award" style="color: #ffb459;"></i>
-                    <p><strong>Few</strong> people knew this about me, but I love singing, playing volleyball, and reading. Jonaxx is one of my favorite authors.</p>
-                  </div>
-                </div>
-              </div>
-            </div><!-- End .content-->
 
             <div class="skills-content ps-lg-4">
               <div class="progress">
