--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <nav id="navbar" class="navbar">
       <ul>
         <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-        <li><a class="nav-link scrollto" href="about.html">About</a></li>
+        <li><a class="nav-link scrollto" href="../Webpage/about.html">About</a></li>
         <li><a class="nav-link scrollto" href="skills.html">Services</a></li>
         <li><a class="nav-link scrollto " href="portfolio.html">Projects</a></li>
         <li><a class="nav-link scrollto " href="pricing.html">Pricing</a></li>
