--- a/life.html
+++ b/life.html
@@ -61,5 +61,27 @@
  
  <section id="life" class="Life">
     <div class="container">
+    <style>
+        *{
+            box-sizing: border-box;
+        }
+    body {
+        margin:0;
+        background: rgb(113, 56, 56);
+        align-items: center;
+    }
+    </style>
+<img src="assets/img/LIFE/1.jpg" height="300"/>
+<img src="assets/img/LIFE/2.jpg" height="300"/> 
+<img src="assets/img/LIFE/3.jpg" height="300"/>
+<img src="assets/img/LIFE/4.jpg" height="300"/>
+<img src="assets/img/LIFE/5.jpg" height="300"/>
+<img src="assets/img/LIFE/6.jpg" height="300"/>
+<img src="assets/img/LIFE/7.jpg" height="300"/>
+<img src="assets/img/LIFE/8.jpg" height="300"/>
+<img src="assets/img/LIFE/9.jpg" height="300"/>
+<img src="assets/img/LIFE/10.jpg" height="300"/>
+<img src="assets/img/LIFE/11.jpg" height="300"/>
 
-        <div class="portfolio-img"><img src="assets/img/portfolio/stolen.JPG" class="img-fluid" alt=""></div>
+
+
